# rag-coding-assistant

./: .gitattributes  .gitignore  GradioDeployedCodingAssistant.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: setup_env.py
src/: __init__.py  main.py
src/agents/: intent_classifier.py  langgraph_agent.py
src/evaluation/: __init__.py  mbpp_evaluator.py
src/models/: __init__.py  phi_model.py
src/rag/: __init__.py  retrieval.py  vectorstore.py
src/ui/: gradio_interface.py
tests/: __init__.py
