[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-coding-assistant"
version = "1.0.0"
description = "A LangGraph-based RAG system for intelligent code assistance"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Karim Khaled"}
]
keywords = ["rag", "langgraph", "coding-assistant", "ai", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy",
    "pandas",
    "langchain-community",
    "langchain-core", 
    "langgraph",
    "chromadb",
    "transformers",
    "torch",
    "gradio",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "isort"]
jupyter = ["jupyter", "ipykernel"]

[project.scripts]
rag-assistant = "rag_coding_assistant.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"rag_coding_assistant" = "src"
